--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -41,8 +41,23 @@
       };
     },
     mounted() {
-      axios
-              .get('https://api.coindesk.com/v1/bpi/currentprice.json')
+      const instance = axios.create({
+        baseURL: 'http://localhost:8085/',
+        withCredentials: true,
+        crossDomain: true,
+        // auth: {
+        //   username: 'andrey.serdtsev@gmail.com',
+        //   password: '123456'
+        // },
+        headers: {
+          "Accept": "application/json",
+          "Content-Type": "application/json",
+          'Authorization': 'Basic YW5kcmV5LnNlcmR0c2V2QGdtYWlsLmNvbToxMjM0NTY=',
+          'X-Organizer-Id': '59d27375-2dfe-4bec-8002-5e6514a7bce2'
+        }
+      });
+      instance
+              .get('context/list')
               .then(response => (this.info = response));
     }
   });
