--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -51,11 +51,10 @@
           <div class="col-sm-12">
             <div class="form">
                <div>
-                 <input type="text" class="form-control" v-model="newTaskName"
-                        placeholder="Add task..."/>
+                 <input type="text" class="form-control" v-model="newTaskName" placeholder="Add task..."/>
                </div>
                <button class="btn btn-primary form-group"
-                       :disabled="!newTaskName"
+                       v-bind:disabled="!newTaskName"
                        v-on:click="addTask(newTaskName)">Add task
                </button>
             </div>
@@ -65,7 +64,7 @@
           <table class="table table-sm table-hover">
             <tbody>
             <tr v-for="task in tasks">
-              <td v-bind:class="{ 'table-success': task.id === currentTask.id }"
+              <td v-bind:class="{ 'table-success': task.id === editableTask.id }"
                   v-on:click="showTask(task)">
                 <span>{{task.name}}</span>
                 <span class="float-right">{{task.completeDate}}</span>
@@ -77,27 +76,49 @@
       </div>
       <div id="taskForm" class="col-sm-5">
         <div class="form" v-if="isTaskEdit">
-          <input v-model.lazy="currentTask.name" type="text" class="form-control" placeholder="Name"/>
+          <!-- Name -->
+          <input v-model.lazy="editableTask.name" type="text" class="form-control" placeholder="Name"/>
+          <!-- Status -->
+          <div class="form-control dropdown">
+            <span>Status:</span>
+            <span>{{editableTask.status}}</span>
+            <span id="statusDropDown"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"></span>
+            <div class="dropdown-menu dropdown-menu-left" aria-labelledby="statusDropDown">
+              <label class="dropdown-item" v-for="status in statuses">
+                <input type="radio"
+                       v-model="editableTask.status"
+                       v-bind:value="status"
+                       v-on:click="setContexts(status)"/>&nbsp;{{status}}
+              </label>
+            </div>
+          </div>
+          <!-- Contexts -->
           <div class="form-control dropdown">
             <span>Contexts:</span>
             <span class="mark"
-                  v-for="contextId in currentTask.contexts">{{getContextName(contextId)}}</span>
+                  v-for="contextId in editableTask.contexts">{{getContextName(contextId)}}</span>
             <span id="contextsDropDown"
                   class="dropdown-toggle float-right"
                   data-toggle="dropdown"
                   aria-haspopup="true"
-                  aria-expanded="false">Change</span>
+                  aria-expanded="false"
+                  v-if="editableTask.status === 'Active'">Change</span>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="contextsDropDown">
               <label class="dropdown-item" v-for="context in contexts">
                 <input type="checkbox"
                        name="options"
-                       v-model="currentTask.contexts"
-                       v-bind:value="context.id"/>&nbsp;{{context.name}}
-
+                       v-model="editableTask.contexts"
+                       v-bind:value="context.id",
+                       v-on:click="setStatus()"/>&nbsp;{{context.name}}
               </label>
             </div>
           </div>
-          <button v-on:click="saveTask(currentTask)" class="btn btn-primary form-group" type="button">Save</button>
+          <!-- Save button -->
+          <button v-on:click="saveTask(editableTask)" class="btn btn-primary form-group" type="button">Save</button>
         </div>
       </div>
     </div>
